# WheresRares

./: .gitignore  LICENSE  README.md
CVCode/CVCode/: Info.plist  main.cpp  main.hpp
CVCode/CVCode.xcodeproj/: project.pbxproj
CVCode/CVCode.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
WheresRaresUnityApp/: Assembly-CSharp.csproj  WheresRaresUnityApp.sln  WheresRaresUnityApp.userprefs
WheresRaresUnityApp/Assets/: MainScene.unity  Untitled.unity  textu.cs
WheresRaresUnityApp/Assets/Mario Haberle Models/: Scene.unity
WheresRaresUnityApp/Assets/Mario Haberle Models/Fence/: fence.prefab  fence_material.mat
WheresRaresUnityApp/Assets/Materials/: DefaultMat.mat
WheresRaresUnityApp/Assets/Scripts/: CVPlugin.cs  CameraControllerScript.cs  CameraLoader.cs  CameraUtils.cs  Logger.cs
WheresRaresUnityApp/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
WheresRaresUnityApp/Temp/__Backupscenes/: 0.backup
android-plugin/cv/include/: HumanTracking.h
android-plugin/cv/src/: .HumanTracking.cpp.swp  HumanTracking.cpp
android-plugin/jni/: Android.mk  Application.mk
vision/: CMakeLists.txt
vision/CPM/c++/: CMakeLists.txt
vision/CPM/c++/src/: .CPM_demo.cpp.swp  CPM_demo.cpp  PoseEstimator.hpp
vision/CPM/testing/src/: applyModel.m
vision/src/: .BackgroundSubtraction.cpp.swp  .HumanDetector.cpp.swp  BackgroundSubtraction.cpp  HumanDetector.cpp  HumanPoseDetectionTracking.cpp  HumanPoseDetectionTracking_BASE_73490.cpp  HumanTracking.cpp  PoseEstimator.cpp  PoseEstimator.hpp
(+26 files in other folders)
