cmake_minimum_required(VERSION 3.0)
project(WhereRaresh)
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package(OpenCV REQUIRED)
find_package(Caffe REQUIRED)
include_directories(${Caffe_INCLUDE_DIRS})
add_definitions(${Caffe_DEFINITIONS})
add_executable(WheresRaresh src/HumanPoseDetectionTracking.cpp src/PoseEstimator.cpp)
target_link_libraries(WheresRaresh ${OpenCV_LIBS})
target_link_libraries(WheresRaresh ${Caffe_LIBRARIES})
